[gd_scene load_steps=27 format=3 uid="uid://h1yxn0wcd4wt"]

[ext_resource type="PackedScene" uid="uid://cnwy7dl1yevgd" path="res://scenes/player.tscn" id="1_1iutq"]
[ext_resource type="Script" path="res://scripts/tutorial/levels/tutorial1.gd" id="1_pk5j6"]
[ext_resource type="Texture2D" uid="uid://bhuhbvbax3vf" path="res://art/Tilesets/ground tiles/new tiles/Grass hill tiles v.2.png" id="2_r7k1m"]
[ext_resource type="Script" path="res://scripts/Grid.gd" id="3_4kn4j"]
[ext_resource type="Texture2D" uid="uid://dueq7plyll2nm" path="res://art/Tilesets/Fences.png" id="3_8gswn"]
[ext_resource type="Texture2D" uid="uid://d2ov37m16f7d7" path="res://art/Tilesets/ground tiles/old tiles/Tilled Dirt.png" id="3_hdd1p"]
[ext_resource type="PackedScene" uid="uid://pkx0020xl1lc" path="res://scenes/blocks/panel_queue.tscn" id="6_kasjd"]
[ext_resource type="PackedScene" uid="uid://c011h37r0uk6h" path="res://scenes/blocks/block.tscn" id="6_pop5m"]
[ext_resource type="Texture2D" uid="uid://dwubw6dygffhr" path="res://art/resources/Play.png" id="7_6e3hc"]
[ext_resource type="FontFile" uid="uid://xkwoks88wexv" path="res://art/resources/Funhouse.ttf" id="7_uihhb"]
[ext_resource type="Texture2D" uid="uid://djuudvcnadlym" path="res://art/blocks/down.png" id="8_bbosd"]
[ext_resource type="Texture2D" uid="uid://ihv0jjgf74wo" path="res://art/resources/Remove.png" id="9_1aikp"]
[ext_resource type="PackedScene" uid="uid://d4lddkr54unir" path="res://scenes/dialogue/dialogue.tscn" id="12_arpkh"]
[ext_resource type="PackedScene" uid="uid://cswuvyicbhc5h" path="res://scenes/gui/skip_button.tscn" id="14_iyhc6"]
[ext_resource type="PackedScene" uid="uid://ccjmncegnpgl8" path="res://scenes/gui/home_button.tscn" id="14_s6xhp"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qbifw"]
texture = ExtResource("2_r7k1m")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
1:2/0 = 0
2:2/0 = 0
2:3/0 = 0
1:3/0 = 0
1:4/0 = 0
2:4/0 = 0
2:5/0 = 0
3:5/0 = 0
6:0/0 = 0
5:0/0 = 0
4:1/0 = 0
5:1/0 = 0
6:2/0 = 0
4:0/0 = 0
3:3/0 = 0
3:4/0 = 0
4:5/0 = 0
0:5/0 = 0
0:4/0 = 0
5:5/0 = 0
6:5/0 = 0
6:1/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
6:3/0 = 0
5:3/0 = 0
4:3/0 = 0
0:3/0 = 0
0:2/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_pwn1v"]
texture = ExtResource("3_hdd1p")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
7:7/0 = 0

[sub_resource type="TileSet" id="TileSet_ux0n8"]
sources/0 = SubResource("TileSetAtlasSource_qbifw")
sources/1 = SubResource("TileSetAtlasSource_pwn1v")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_t2756"]
texture = ExtResource("3_8gswn")
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 8, -8, -8, 8, -8, 8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
2:0/0 = 0
2:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:0/0/physics_layer_0/angular_velocity = 0.0
3:0/0 = 0
3:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0
2:1/0 = 0
2:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:1/0/physics_layer_0/angular_velocity = 0.0
3:1/0 = 0
3:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:1/0/physics_layer_0/angular_velocity = 0.0
0:2/0 = 0
0:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:2/0/physics_layer_0/angular_velocity = 0.0
1:2/0 = 0
1:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:2/0/physics_layer_0/angular_velocity = 0.0
2:2/0 = 0
2:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:2/0/physics_layer_0/angular_velocity = 0.0
3:2/0 = 0
3:2/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:2/0/physics_layer_0/angular_velocity = 0.0
0:3/0 = 0
0:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:3/0/physics_layer_0/angular_velocity = 0.0
1:3/0 = 0
1:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0 = 0
2:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
2:3/0/physics_layer_0/angular_velocity = 0.0
2:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:3/0 = 0
3:3/0/physics_layer_0/linear_velocity = Vector2(0, 0)
3:3/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_hkxr0"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_t2756")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dirll"]
bg_color = Color(0.258824, 0.262745, 0.231373, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whypw"]
bg_color = Color(0.784314, 0.776471, 0.705882, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kkep4"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_bmyyg"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_b4pse"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0hja1"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(1, 0.329412, 0.392157, 1)

[node name="Level1" type="Node2D"]
script = ExtResource("1_pk5j6")

[node name="TileMap1" type="TileMap" parent="."]
tile_set = SubResource("TileSet_ux0n8")
format = 2
layer_0/tile_data = PackedInt32Array(65537, 65536, 1, 65538, 65536, 1, 131074, 65536, 1, 131075, 65536, 1, 65539, 65536, 1, 2, 327680, 5, 1, 0, 5, 0, 327680, 5, 65536, 0, 5, 131072, 0, 5, 4, 65536, 1, 3, 65536, 1, 65540, 65536, 1, 131073, 65536, 1, 196608, 327680, 5, 196609, 65536, 1, 196610, 327680, 5, 196611, 65536, 1, 196612, 65536, 1, 196613, 65536, 1, 196614, 65536, 1, 131078, 65536, 1, 65542, 65536, 1, 65541, 65536, 1, 5, 65536, 1, 6, 65536, 1, 65543, 65536, 1, 131079, 65536, 1, 196615, 65536, 1, 262144, 327680, 5, 327680, 65536, 1, 393216, 131072, 5, 262145, 65536, 1, 327681, 327680, 5, 393217, 65536, 1, 262146, 65536, 1, 327682, 65536, 1, 393218, 65536, 1, 262147, 65536, 1, 327683, 65536, 1, 393219, 65536, 1, 131076, 65536, 1, 262148, 1, 1, 327684, 131072, 5, 393220, 65536, 1, 131077, 65536, 1, 262149, 65536, 1, 327685, 65536, 1, 393221, 65536, 1, 262150, 65536, 1, 327686, 65536, 1, 393222, 65536, 1, 7, 131072, 5, 262151, 65536, 1, 327687, 65536, 1, 393223, 262144, 5, 8, 65536, 1, 65544, 131072, 5, 131080, 65536, 1, 196616, 65536, 1, 262152, 65536, 1, 327688, 262144, 5, 393224, 262144, 5, 9, 65536, 1, 65545, 65536, 1, 131081, 65536, 1, 196617, 65536, 1, 262153, 65536, 1, 327689, 65536, 1, 393225, 65536, 1, 458752, 65536, 1, 458753, 131072, 5, 458754, 65536, 1, 458755, 131072, 5, 458756, 65536, 1, 458757, 65536, 1, 458758, 65536, 1, 458759, 65536, 1, 458760, 65536, 1, 458761, 131072, 5)

[node name="TileMap2" type="TileMap" parent="."]
tile_set = SubResource("TileSet_hkxr0")
format = 2
layer_0/tile_data = PackedInt32Array(0, 65536, 0, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 65536, 2, 458753, 131072, 2, 458754, 131072, 2, 458755, 131072, 2, 458756, 131072, 2, 458757, 131072, 2, 458758, 131072, 2, 458759, 131072, 2, 458760, 131072, 2, 458761, 196608, 2, 393225, 0, 1, 327689, 0, 1, 262153, 0, 1, 196617, 0, 1, 131081, 0, 1, 65545, 0, 1, 9, 196608, 0, 8, 131072, 3, 7, 131072, 3, 6, 131072, 3, 5, 131072, 3, 4, 131072, 3, 3, 131072, 3, 2, 131072, 3, 1, 131072, 3)

[node name="Grid" type="Node2D" parent="."]
script = ExtResource("3_4kn4j")

[node name="PanelBottom" type="Panel" parent="."]
offset_left = -3.0
offset_top = 128.0
offset_right = 205.0
offset_bottom = 155.0
theme_override_styles/panel = SubResource("StyleBoxFlat_dirll")

[node name="RightPanel" type="Panel" parent="."]
offset_left = 160.0
offset_top = -2.0
offset_right = 210.0
offset_bottom = 128.0
theme_override_styles/panel = SubResource("StyleBoxFlat_whypw")

[node name="Player" parent="." instance=ExtResource("1_1iutq")]
position = Vector2(64, 0)

[node name="Button" type="Button" parent="."]
offset_left = 170.0
offset_top = 130.0
offset_right = 366.0
offset_bottom = 202.0
scale = Vector2(0.12, 0.12)
theme_override_fonts/font = ExtResource("7_uihhb")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_kkep4")
theme_override_styles/hover = SubResource("StyleBoxFlat_bmyyg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b4pse")
text = "Play"
icon = ExtResource("7_6e3hc")

[node name="LimparButton" type="Button" parent="."]
offset_left = 170.0
offset_top = 139.0
offset_right = 430.0
offset_bottom = 211.0
scale = Vector2(0.12, 0.12)
theme_override_fonts/font = ExtResource("7_uihhb")
theme_override_font_sizes/font_size = 40
theme_override_styles/normal = SubResource("StyleBoxFlat_kkep4")
theme_override_styles/hover = SubResource("StyleBoxFlat_bmyyg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_b4pse")
text = "Limpar"
icon = ExtResource("9_1aikp")

[node name="PanelQueue" parent="." instance=ExtResource("6_kasjd")]
offset_left = 1.0
offset_top = 129.0
offset_right = 169.0
offset_bottom = 149.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 0

[node name="RightBlock" parent="." instance=ExtResource("6_pop5m")]
offset_left = 180.0
offset_top = 7.0
offset_right = 260.0
offset_bottom = 87.0
category = "right"

[node name="image" parent="RightBlock" index="0"]
position = Vector2(40, 40)
scale = Vector2(0.3, 0.3)

[node name="DownBlock" parent="." instance=ExtResource("6_pop5m")]
offset_left = 163.0
offset_top = 7.0
offset_right = 243.0
offset_bottom = 87.0
category = "down"
metadata/_edit_group_ = true

[node name="image" parent="DownBlock" index="0"]
position = Vector2(40, 40)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_bbosd")

[node name="Entities" type="Node2D" parent="."]

[node name="Dialogue" parent="." instance=ExtResource("12_arpkh")]
offset_top = 42.0
offset_bottom = 42.0

[node name="Chat" parent="Dialogue" index="4"]
text = ""

[node name="SkipButton" parent="." instance=ExtResource("14_iyhc6")]

[node name="PanelShowButtons" type="Panel" parent="."]
visible = false
offset_left = 161.0
offset_top = 4.0
offset_right = 198.0
offset_bottom = 27.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0hja1")

[node name="Button2" parent="." instance=ExtResource("14_s6xhp")]
offset_left = 137.0
offset_right = 154.0
offset_bottom = 17.0

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LimparButton" to="." method="_on_limpar_button_pressed"]
[connection signal="block_added" from="PanelQueue" to="." method="_on_panel_queue_block_added"]
[connection signal="dialogue_change" from="Dialogue" to="." method="_on_dialogue_dialogue_change"]
[connection signal="mouse_entered" from="Dialogue" to="." method="_on_dialogue_mouse_entered"]
[connection signal="mouse_exited" from="Dialogue" to="." method="_on_dialogue_mouse_exited"]
[connection signal="should_change_stage" from="Dialogue" to="." method="_on_dialogue_should_change_stage"]
[connection signal="pressed" from="SkipButton" to="." method="_on_skip_button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]

[editable path="RightBlock"]
[editable path="DownBlock"]
[editable path="Dialogue"]
